--- a/Destabilizing Eager Execution In Tensorflow.ipynb
+++ b/Destabilizing Eager Execution In Tensorflow.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1e1e7d8e",
+   "id": "633f09cf",
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8a1401bf",
+   "id": "b25fc091",
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ed73e08",
+   "id": "8648e1fc",
    "metadata": {},
    "source": [
     "**Eager function allows code to run on tensorflow without the need of tensorflow to build up graphs, it allows for quick build up. Eager function is set as a default of Tensorflow from the Tensorflow 2.**"
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bd63c59d",
+   "id": "5d11fa9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f9903946",
+   "id": "82210fb6",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3a564e5c",
+   "id": "d7dc0c02",
    "metadata": {},
    "outputs": [
     {
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "dae5e3cf",
+   "id": "7320384e",
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "630c3fbf",
+   "id": "1be4da61",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d422efc0",
+   "id": "e4739179",
    "metadata": {},
    "outputs": [
     {
@@ -176,11 +176,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e862646d",
+   "execution_count": 1,
+   "id": "d990c0b2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\hp\\anaconda3\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.24.3\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "from tensorflow.python.framework.ops import enable_eager_execution\n",
+    "enable_eager_execution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6cd93d43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "tf.executing_eagerly()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "6c26d39c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def fizzbuzz(max_num):\n",
+    "    #counter = tf.constant(0)\n",
+    "    max_num = tf.convert_to_tensor(max_num)\n",
+    "    for num in range(1,max_num.numpy()+1):\n",
+    "        num = tf.constant(num)\n",
+    "        if int(num%3) == 0 and int(num%5) == 0:\n",
+    "            print(\"fizzbuzz\")\n",
+    "        elif int(num%3) == 0:\n",
+    "            print(\"fizz\")\n",
+    "        elif int(num%5) == 0:\n",
+    "            print(\"buzz\")\n",
+    "        else:\n",
+    "            print(num.numpy())\n",
+    "\n",
+    "        #counter += 1        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "f7a610b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "fizz\n",
+      "4\n",
+      "buzz\n",
+      "fizz\n",
+      "7\n",
+      "8\n",
+      "fizz\n",
+      "buzz\n",
+      "11\n",
+      "fizz\n",
+      "13\n",
+      "14\n",
+      "fizzbuzz\n"
+     ]
+    }
+   ],
+   "source": [
+    "fizzbuzz(15)"
+   ]
   }
  ],
  "metadata": {
